Develop (#57)
* Modify Document printing logic

* Add all system env to print process

* Fix print issues (#53)

* try to fix by removing the env variables, add printing info

* export printing to a shell script

* modify resourceLoader param

* modify resourceLoader param 2

* Change output location

* Add log, update process environment

* update print script

* add pythonhome to script

* add pythonpath to script, remove inheritIO

* redirectOutput of process to file

* remove pythonhome to check if thats the issue

* return pythonhome

* add bin to path

* change pythonhome location

* Remove PythonHome setting.

* modify error logging in executePrint

* reformat code

* remove non-needed variables

* Move images to directory

* Temporarily disable some tests, fix other

* Temporarily disable some tests, fix other. Add output-dir property

* Add output-dir property to tests resources

* Price label update (#56)

* Add CategoryColumn, modify inventoryItem logic

* General improvements

* Print ticket labels confirmation added, TicketView modifications, npe preventions

* Clear Todo file

* Fix malfunction